# aula20_bootcamp

./: pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  routes.py  schema.py
frontend/.streamlit/: config.toml
