[project]
name = "aula20-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Nagel",email = "nicolascnagel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydentic (>=0.0.1.dev3,<0.0.2)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "streamlit (>=1.46.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
